<resources>
    <string name="app_name">Masrapt</string>
    <string name="api_base_url">http://192.168.88.175:3001/</string>
    <string name="title_activity_dashboard">Dashboard_activity</string>
    <string name="title_home">Map</string>
    <string name="title_dashboard">Buses</string>
    <string name="title_notifications">Routes</string>
    <string name="intro_text">Never miss the bus whit us</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="password">Forget Password</string>
    <string name="registe">Registe</string>
    <string name="save">Save</string>
    <string name="account">ACCOUNT</string>
    <string name="themes">THEMES</string>
    <string name="changer_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="main_phrase">Never miss the bus with us</string>
    <string name="average_waiting_time">45 mn</string>
    <string name="nr_bus_active">4 active</string>
    <string name="user_name">Roberto Carlos</string>
    <string name="user_mail">rmedina@uta.cv</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="current_theme">System Default</string>
    <string name="current_route">All Routes</string>
    <string name="api_key">AIzaSyDZ6HCz1XHDcfRdDA_CE1KxSuIxqzLOv_A</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>