<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_directions_bus_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_timeline_24"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/busStops"
        android:icon="@drawable/ic_baseline_brightness_1_24"
        android:title="@string/title_notifications" />

</menu>